<resources>
    <string name="app_name">Calculator Basic</string>
    <string name="clearButton">CLEAR</string>
    <string name="divide">/</string>
    <string name="numberSeven">7</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="Three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="substract">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="multiply">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
</resources>