<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="horizontal"
    android:padding="4dp">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/clearButton"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/divide"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/numberSeven"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/eight"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/nine"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/multiply"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/four"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/five"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/six"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/substract"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/one"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/two"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/Three"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/add"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/zero"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/dot"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/equal"
        android:textColor="@color/black" />


</GridLayout>